function-like/tests/fail/invalid_syntax.stderr
error: unexpected token
 --> tests/fail/invalid_syntax.rs:4:12
  |
4 |     layer!(meow);
  |            ^^^^
